# sample-simple-ai-app-streamlit

./: .gitignore  README.md
app/: app.py  makefile  pyproject.toml  setting.py
app/src/: model.py  plot.py
common/: check.py  network.py
ml/: pyproject.toml  training.ipynb
ml/model_param/: latest_train_model.pth
